end writing relation

--- a/docs/sections/01.tex
+++ b/docs/sections/01.tex
@@ -6,7 +6,7 @@ There could be different trends in different years and create a single model cou
 
 \subsection{Features}
 
-There are many features! Are all of them useful? After studying about the functioning of the division by American geographical and administrative areas and the structure of the most common houses in America, I figured out that some column were in reality duplicated data: a lot of administrative subdivision were redundant and probably not necessary, since we already have a fine grained location data given by coordinates probably a city id or the neighborhood id were not necessary, so I dropped those columns and other administrative categories. Also some other features were duplicated since Zillow provided the raw data they get from assessors and ones calculated by themselves\footnote{see in the comment section at \url{https://www.kaggle.com/c/zillow-prize-1/discussion/33899} for more informations.}.
+After studying about the functioning of the division by American geographical and administrative areas and the structure of the most common houses in America, I figured out that some column were in reality duplicated data: a lot of administrative subdivision were redundant and probably not necessary, since we already have a fine grained location data given by coordinates probably a city id or the neighborhood id were not necessary, so I dropped those columns and other administrative categories. Also some other features were duplicated since Zillow provided the raw data they get from assessors and ones calculated by themselves\footnote{see in the comment section at \url{https://www.kaggle.com/c/zillow-prize-1/discussion/33899} for more informations.}.
 
 Hence we can see that many rows are missing some values. Diving deep in the problem we can infer that many columns probably\footnote{Here I used the word ``probably'' because we don't really know if missing values were zero or there were some other kind of issue so that the real value was not taken, anyway, based on statistics and logic, it is likely that more houses paid the taxes or didn't have a spa} did not input data when the value was zero (it is not a all comprehensive case, some features were relevant only for certain counties, see more at \ref{counties_importance}). For example, if a house does not have a spa, the value of the column ``spa'' is missing, but it is not zero. For categorical data I decided to fill the missing values with zero, since it is the most likely value, while fill continuous data was more thought. Some columns are missing a lot of fields where others are just missing few hundreds or thousands of rows. I decided to fill the least unpopulated columns with their mean\footnote{Actually not the exact mean, I used instead the following formula:
 $$
