--- a/docs/sections/01.tex
+++ b/docs/sections/01.tex
@@ -1,12 +1,12 @@
 The first problem to consider was how to join the data, the dataset is a collection of houses features splitted by year of assessment. Should I make an analysis for each year or merge the datasets togheter? How to handle duplicated rows?
     
-There could be different trends in different years and create a single model could be a bad idea, anyway at a first sight the dataset is quite homogeneous, so I decided to merge all togheter. In second instance I saw that there were some duplicated rows, actually few hundreds of houses have been selled twice or trice in a year: keep them all could create redundancy and alter the columns statistics, nevertheless we could find some interesting information about the variations (or non-variations) of error over time, so I decided to keep them all\footnote{
+There could be different trends in different years and create a single model could be a bad idea, anyway at a first sight the dataset is quite homogeneous, so I decided to merge all togheter. In second instance I saw that there were some duplicated rows, actually few hundreds of houses have been sold twice or trice in a year: keep them all could create redundancy and alter the columns statistics, nevertheless we could find some interesting information about the variations (or non-variations) of error over time, so I decided to keep them all\footnote{
     Also the Zillow competition expects to predict the sell value of a property in different months and years, so I assume it is important to keep the information about the time of the assessment.
     }.
 
 \subsection{Features}
 
-After studying about the functioning of the division by American geographical and administrative areas and the structure of the most common houses in America, I figured out that some column were in reality duplicated data: a lot of administrative subdivision were redundant and probably not necessary, since we already have a fine grained location data given by coordinates probably a city id or the neighborhood id were not necessary, so I dropped those columns and other administrative categories. Also some other features were duplicated since Zillow provided the raw data they get from assessors and ones calculated by themselves\footnote{see in the comment section at \url{https://www.kaggle.com/c/zillow-prize-1/discussion/33899} for more informations.}.
+After studying about the functioning of the division by American geographical and administrative areas and the structure of the most common houses in America, I figured out that some columns were in reality duplicated data: a lot of administrative subdivision were redundant and probably not necessary, since we already have a fine grained location data given by coordinates probably a city id or the neighborhood id were not necessary, so I dropped those columns and other administrative categories. Also some other features were duplicated since Zillow provided the raw data they get from assessors and ones calculated by themselves\footnote{see in the comment section at \url{https://www.kaggle.com/c/zillow-prize-1/discussion/33899} for more informations.}.
 
 Hence we can see that many rows are missing some values. Diving deep in the problem we can infer that many columns probably\footnote{Here I used the word ``probably'' because we don't really know if missing values were zero or there were some other kind of issue so that the real value was not taken, anyway, based on statistics and logic, it is likely that more houses paid the taxes or didn't have a spa} did not input data when the value was zero (it is not a all comprehensive case, some features were relevant only for certain counties, see more at \ref{counties_importance}). For example, if a house does not have a spa, the value of the column ``spa'' is missing, but it is not zero. For categorical data I decided to fill the missing values with zero, since it is the most likely value, while fill continuous data was more thought. Some columns are missing a lot of fields where others are just missing few hundreds or thousands of rows. I decided to fill the least unpopulated columns with their mean\footnote{Actually not the exact mean, I used instead the following formula:
 $$
