minor fixes before submission

--- a/05 - Boosting.ipynb
+++ b/05 - Boosting.ipynb
@@ -1,9 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a93d11c8",
+   "metadata": {},
+   "source": [
+    "# Progetto di Data and Web mining\n",
+    "\n",
+    "Matteo Spanio, A.A. 2021/2022\n",
+    "\n",
+    "# Boosting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ed99f6ef",
+   "id": "55c5aa07",
    "metadata": {},
    "outputs": [],
    "source": [
